--- a/brief2_3/style.css
+++ b/brief2_3/style.css
@@ -15,6 +15,7 @@ ul{
 a{
     text-decoration: none;
     padding: 10px;
+    color: black;
 }
 header ul li a:hover{
     border-bottom: 2px solid black;
