--- a/brief2_3/style.css
+++ b/brief2_3/style.css
@@ -1,9 +1,15 @@
 *{
     font-family: calibri;
+    color :#3D3D3D;
+}
+body{
+    background-color: #ece5e7 ;
 }
 header{
     font-size: 20px;
     display: flex;
+    margin: -8px;
+    background-color: #3D3D3D;
 }
 ul{
     margin-left: -40px;
@@ -15,20 +21,29 @@ ul{
 a{
     text-decoration: none;
     padding: 10px;
-    color: black;
+    color: white;
+}
+nav ul li a{
+    color: #3D3D3D;
 }
 header ul li a:hover{
-    border-bottom: 2px solid black;
+    border-bottom: 2px solid white;
 }
 nav ul li a:hover{
     font-weight: bolder;
 }
 .logo{
-    background-color: black;
-    color: white;
-    padding: 10px 10px 0 10px;
+    border: 1px solid black;
+    background-color: white;
+    color: black;
+    padding: 4px 8px;
     margin: 5px;
     font-size: 36px;
+}
+.logo:hover{
+    border: 1px solid white;
+    background-color: #3D3D3D;
+    color: white;
 }
 img{
     width: 210px;
@@ -40,6 +55,7 @@ img{
     width: 220px;
     padding: 10px;
     margin: 10px 10px;
+    background-color: whitesmoke;
 }
 .card:hover{
     box-shadow: 1px 1px 10px 3px gray;
@@ -57,6 +73,19 @@ footer{
     display: flex;
     flex-flow: row wrap;
 }
+.footer{
+    margin: -8px;
+    padding: 5px;
+    padding-bottom: 10px;
+    font-size: 14px;
+    color: white;
+    background-color: #3D3D3D;
+    text-align: center;
+}
+footer a{
+    color: aliceblue;
+    text-decoration: underline;
+}
 @media only screen and (max-width: 620px){
     footer{
         display: block;
@@ -72,13 +101,36 @@ footer{
     ul li{
         font-size: 14px;
     }
+    header ul li{
+        font-size: 17px;
+    }
+    header ul{
+        padding: 12px;
+        padding-left: 60px;
+        background-color: #3D3D3D;
+        margin-top: 8px;
+    }
     header{
         font-size: 20px;
         display: block;
+        background:none;
+    }
+    header ul li a:hover{
+        background-color: #545050;
+        border-bottom: 2px solid white;
+        border-radius: 60px;
     }
     .logo{
+        border: none;
+        background: none;
         font-size: 82px;
-        margin-left: 25%;
+        margin-left: 29%;
+    }
+    .logo:hover{
+        border-radius: 70px;
+        padding: 0px 60px;
+        margin-left: 20%;
+        transition: 0.7s;
     }
     img{
         width: 96%;
