--- a/brief2_3/style.css
+++ b/brief2_3/style.css
@@ -11,7 +11,6 @@ header{
     align-items: baseline;
     margin: -8px;
     background-color: #3D3D3D;
-    padding-bottom: -10px;
 }
 ul{
     margin-left: -40px;
@@ -39,6 +38,7 @@ nav ul li a:hover{
     background-color: white;
     color: black;
     padding: 4px 8px;
+    padding-top: 0px;
     margin-left: 5px;
     font-size: 36px;
 }
@@ -62,6 +62,7 @@ img{
 .card:hover{
     box-shadow: 1px 1px 10px 3px gray;
     transform: translate(0,-10px);
+    border-radius: 12px;
     transition: 0.5s;
 }
 .rrp{
@@ -115,6 +116,7 @@ article a{
         font-size: 20px;
         display: block;
         background:none;
+        text-align: center;
     }
     header ul li a:hover{
         background-color: #545050;
@@ -125,12 +127,12 @@ article a{
         border: none;
         background: none;
         font-size: 82px;
-        margin-left: 29%;
+        /* margin-left: 29%; */
     }
     .logo:hover{
         border-radius: 70px;
         padding: 0px 60px;
-        margin-left: 20%;
+        /* margin-left: 20%; */
         transition: 0.7s;
     }
     img{
