--- a/brief2_3/style.css
+++ b/brief2_3/style.css
@@ -54,6 +54,7 @@ img{
 }
 .card{
     border: 1px solid black;
+    border-style: inset;
     width: 220px;
     padding: 10px;
     margin: 10px 10px;
@@ -140,3 +141,15 @@ article a{
         padding: 5px;
     }
 }
+@media print {
+    header , nav{
+        display: none;
+    }
+    .card{
+        width: 27%;
+    }
+    img{
+        width: 180px;
+        height: 210px;
+    }
+ }
